--- a/ent.css
+++ b/ent.css
@@ -1,6 +1,11 @@
+
+
+
 .container2 {
     max-width:80%;
     margin: auto;
+  
+
 }
 
 .container2 h1 {
@@ -66,8 +71,9 @@ box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.2);
 }.wrapper, .wrapper1, .wrapper2, .wrapper3 {
     display: flex;
     align-items: center;
-   
- 
+   border-left: 3vh solid rgb(10, 78, 53);
+ border-radius: 10vh;
+ border-right: 3vh solid rgb(10, 78, 53);
     padding: 20px;
 
 }
@@ -85,9 +91,10 @@ box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.2);
     box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.4); 
 }
 .wrapper1 img,.wrapper3 img {
+    
     width: 67vh;
     height: auto;
-    border-radius: 8px;
+    border-radius: 5vh;
     margin-left: 20vh;
     box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.4); 
 }
@@ -96,6 +103,30 @@ box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.2);
 }
 
 
+.wrapper4 img {
+    width: auto;
+   max-height: 50vh;
+   height: auto;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    
+}
+.wrapper4 h2 {
+  
+    text-align: center;
+    margin-bottom: 10vh;
+}
+.wrapper4 ul {
+    list-style-type: none;
+    padding: 0;
+}
+.wrapper4 ul li {
+    background: #e9ecef;
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 5px;
+    font-weight: 900;
+}
 
 /* Responsive Design */
 @media (max-width: 1500px) {
@@ -124,6 +155,7 @@ box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.2);
         margin-right: 6vh;
     }
 }
+
 
 @media (max-width: 1024px) {
     .wrapper img, .wrapper1 img, .wrapper2 img, .wrapper3 img {
@@ -223,3 +255,4 @@ box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.2);
         margin-right: 2vh;
     }
 }
+
